; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/sti/bdisp/extr_bdisp-debug.c_bdisp_dbg_dump_rsf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/sti/bdisp/extr_bdisp-debug.c_bdisp_dbg_dump_rsf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"%s\090x%08X\09\00", align 1
@.str.1 = private unnamed_addr constant [30 x i8] c"H: %d(6.10) / scale~%dx0.1 - \00", align 1
@.str.2 = private unnamed_addr constant [27 x i8] c"V: %d(6.10) / scale~%dx0.1\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.seq_file*, i32, i8*)* @bdisp_dbg_dump_rsf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bdisp_dbg_dump_rsf(%struct.seq_file* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.seq_file*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.seq_file* %0, %struct.seq_file** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32 (%struct.seq_file*, i8*, ...) @seq_printf(%struct.seq_file* %8, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %9, i32 %10)
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  br label %30

15:                                               ; preds = %3
  %16 = load i32, i32* %5, align 4
  %17 = and i32 %16, 65535
  store i32 %17, i32* %7, align 4
  %18 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i32, i32* %7, align 4
  %21 = sdiv i32 10240, %20
  %22 = call i32 (%struct.seq_file*, i8*, ...) @seq_printf(%struct.seq_file* %18, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 %19, i32 %21)
  %23 = load i32, i32* %5, align 4
  %24 = ashr i32 %23, 16
  store i32 %24, i32* %7, align 4
  %25 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %26 = load i32, i32* %7, align 4
  %27 = load i32, i32* %7, align 4
  %28 = sdiv i32 10240, %27
  %29 = call i32 (%struct.seq_file*, i8*, ...) @seq_printf(%struct.seq_file* %25, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.2, i64 0, i64 0), i32 %26, i32 %28)
  br label %30

30:                                               ; preds = %15, %14
  %31 = load %struct.seq_file*, %struct.seq_file** %4, align 8
  %32 = call i32 @seq_putc(%struct.seq_file* %31, i8 signext 10)
  ret void
}

declare dso_local i32 @seq_printf(%struct.seq_file*, i8*, ...) #1

declare dso_local i32 @seq_putc(%struct.seq_file*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
